<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:padding="@dimen/size4"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutSearchUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size8"
        android:hint="@string/search_user"
        android:textColorHint="@color/green"
        app:hintTextColor="@color/green"
        app:boxStrokeColor="@color/green"
        app:expandedHintEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSearchUser"
            android:paddingStart="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUsers"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_zero"
        android:fadeScrollbars="false"
        android:visibility="visible"
        tools:visibility="visible"
        tools:listitem="@layout/item_user"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearchUser"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tvNotFoundResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MediumLabel"
        android:text="@string/no_search_results_found"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/recyclerViewUsers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/recyclerViewUsers" />
    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ProgressBar>
</androidx.constraintlayout.widget.ConstraintLayout>